--- a/demo.html
+++ b/demo.html
@@ -6,6 +6,17 @@
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="dist/css/style.css">
 
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-101130767-1', 'auto');
+        ga('send', 'pageview');
+
+    </script>
+
 </head>
 <body>
 
@@ -15,87 +26,91 @@
 </div>
 
 <div class="container">
-    <hr />
-    <h4>Example when not using the plugin</h4>
-    <div class="row">
-        <div class="col-sm-4 col-md-3">
-            <img src="dist/img/350x150.png" alt="" title="" />
-        </div>
-        <div class="col-sm-4 col-md-3">
-            <img src="dist/img/350x150.png" alt="" title="" />
-        </div>
-        <div class="col-sm-4 col-md-3">
-            <img src="dist/img/350x250.png" alt="" title="" />
-        </div>
-        <div class="col-sm-4 col-md-3">
-            <img src="dist/img/350x150.png" alt="" title="" />
-        </div>
-        <div class="col-sm-4 col-md-3">
-            <img src="dist/img/350x150.png" alt="" title="" />
-        </div>
-        <div class="col-sm-4 col-md-3">
-            <img src="dist/img/350x150.png" alt="" title="" />
-        </div>
-        <div class="col-sm-4 col-md-3">
-            <img src="dist/img/350x250.png" alt="" title="" />
-        </div>
-        <div class="col-sm-4 col-md-3">
-            <img src="dist/img/350x150.png" alt="" title="" />
-        </div>
-        <div class="col-sm-4 col-md-3">
-            <img src="dist/img/350x150.png" alt="" title="" />
-        </div>
-        <div class="col-sm-4 col-md-3">
-            <img src="dist/img/350x150.png" alt="" title="" />
-        </div>
-        <div class="col-sm-4 col-md-3">
-            <img src="dist/img/350x150.png" alt="" title="" />
-        </div>
-        <div class="col-sm-4 col-md-3">
-            <img src="dist/img/350x150.png" alt="" title="" />
+    <div class="col-sm-6">
+        <div class="well">
+            <h4>Example when not using the plugin</h4>
+            <div class="row">
+                <div class="col-sm-4 col-md-3">
+                    <img src="dist/img/350x150.png" alt="" title="" />
+                </div>
+                <div class="col-sm-4 col-md-3">
+                    <img src="dist/img/350x150.png" alt="" title="" />
+                </div>
+                <div class="col-sm-4 col-md-3">
+                    <img src="dist/img/350x250.png" alt="" title="" />
+                </div>
+                <div class="col-sm-4 col-md-3">
+                    <img src="dist/img/350x150.png" alt="" title="" />
+                </div>
+                <div class="col-sm-4 col-md-3">
+                    <img src="dist/img/350x150.png" alt="" title="" />
+                </div>
+                <div class="col-sm-4 col-md-3">
+                    <img src="dist/img/350x150.png" alt="" title="" />
+                </div>
+                <div class="col-sm-4 col-md-3">
+                    <img src="dist/img/350x250.png" alt="" title="" />
+                </div>
+                <div class="col-sm-4 col-md-3">
+                    <img src="dist/img/350x150.png" alt="" title="" />
+                </div>
+                <div class="col-sm-4 col-md-3">
+                    <img src="dist/img/350x150.png" alt="" title="" />
+                </div>
+                <div class="col-sm-4 col-md-3">
+                    <img src="dist/img/350x150.png" alt="" title="" />
+                </div>
+                <div class="col-sm-4 col-md-3">
+                    <img src="dist/img/350x150.png" alt="" title="" />
+                </div>
+                <div class="col-sm-4 col-md-3">
+                    <img src="dist/img/350x150.png" alt="" title="" />
+                </div>
+            </div>
         </div>
     </div>
-</div>
 
-<div class="container">
-    <hr />
-    <h4>Example when using the plugin</h4>
-    <div class="row">
-        <div class="myClass col-sm-4 col-md-3">
-            <img src="dist/img/350x150.png" alt="" title="" />
-        </div>
-        <div class="myClass col-sm-4 col-md-3">
-            <img src="dist/img/350x150.png" alt="" title="" />
-        </div>
-        <div class="myClass col-sm-4 col-md-3">
-            <img src="dist/img/350x250.png" alt="" title="" />
-        </div>
-        <div class="myClass col-sm-4 col-md-3">
-            <img src="dist/img/350x150.png" alt="" title="" />
-        </div>
-        <div class="myClass col-sm-4 col-md-3">
-            <img src="dist/img/350x150.png" alt="" title="" />
-        </div>
-        <div class="myClass col-sm-4 col-md-3">
-            <img src="dist/img/350x150.png" alt="" title="" />
-        </div>
-        <div class="myClass col-sm-4 col-md-3">
-            <img src="dist/img/350x250.png" alt="" title="" />
-        </div>
-        <div class="myClass col-sm-4 col-md-3">
-            <img src="dist/img/350x150.png" alt="" title="" />
-        </div>
-        <div class="myClass col-sm-4 col-md-3">
-            <img src="dist/img/350x150.png" alt="" title="" />
-        </div>
-        <div class="myClass col-sm-4 col-md-3">
-            <img src="dist/img/350x150.png" alt="" title="" />
-        </div>
-        <div class="myClass col-sm-4 col-md-3">
-            <img src="dist/img/350x150.png" alt="" title="" />
-        </div>
-        <div class="myClass col-sm-4 col-md-3">
-            <img src="dist/img/350x150.png" alt="" title="" />
+    <div class="col-sm-6">
+        <div class="well">
+            <h4>Example when using the plugin</h4>
+            <div class="row">
+                <div class="myClass col-sm-4 col-md-3">
+                    <img src="dist/img/350x150.png" alt="" title="" />
+                </div>
+                <div class="myClass col-sm-4 col-md-3">
+                    <img src="dist/img/350x150.png" alt="" title="" />
+                </div>
+                <div class="myClass col-sm-4 col-md-3">
+                    <img src="dist/img/350x250.png" alt="" title="" />
+                </div>
+                <div class="myClass col-sm-4 col-md-3">
+                    <img src="dist/img/350x150.png" alt="" title="" />
+                </div>
+                <div class="myClass col-sm-4 col-md-3">
+                    <img src="dist/img/350x150.png" alt="" title="" />
+                </div>
+                <div class="myClass col-sm-4 col-md-3">
+                    <img src="dist/img/350x150.png" alt="" title="" />
+                </div>
+                <div class="myClass col-sm-4 col-md-3">
+                    <img src="dist/img/350x250.png" alt="" title="" />
+                </div>
+                <div class="myClass col-sm-4 col-md-3">
+                    <img src="dist/img/350x150.png" alt="" title="" />
+                </div>
+                <div class="myClass col-sm-4 col-md-3">
+                    <img src="dist/img/350x150.png" alt="" title="" />
+                </div>
+                <div class="myClass col-sm-4 col-md-3">
+                    <img src="dist/img/350x150.png" alt="" title="" />
+                </div>
+                <div class="myClass col-sm-4 col-md-3">
+                    <img src="dist/img/350x150.png" alt="" title="" />
+                </div>
+                <div class="myClass col-sm-4 col-md-3">
+                    <img src="dist/img/350x150.png" alt="" title="" />
+                </div>
+            </div>
         </div>
     </div>
 </div>
