--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!--
+- Author: Kevin Lynch @ KPL Designs
+- Version: 0.01
+- Github: https://github.com/kevin-lynch/bsEqualizeRow
+-
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
